--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -28,10 +28,11 @@ jobs:
       - uses: docker/metadata-action@v5
         id: meta
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/email-poller
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/email-processor
       - uses: docker/build-push-action@v5
         with:
-          context: ./services/email-processor
+          context: .
+          file: ./services/email-processor/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -61,7 +62,8 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/database-migration
       - uses: docker/build-push-action@v5
         with:
-          context: ./services/database-migration
+          context: .
+          file: ./services/database-migration/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -79,6 +81,6 @@ jobs:
           username: ${{ secrets.HETZNER_USER }}
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
-            cd fleetmanager
+            cd ~/fleetmanager
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d
