--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,16 +34,17 @@ services:
       - fleetmanager-network
 
   email-processor:
-    image: ghcr.io/valkozaur/email-processor:latest
+    image: ghcr.io/valkozaur/email-processor:main
     container_name: email-processor
     restart: unless-stopped
     env_file:
-      - .env
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
+      OTEL_SERVICE_NAME: email-processor
     volumes:
-      - email_poller_data:/app/data
-      - email_poller_logs:/app/logs
+      - email_processor_data:/app/data
+      - email_processor_logs:/app/logs
       - ./.credentials:/app/credentials:ro
     mem_limit: 512m
     mem_reservation: 256m
@@ -51,17 +52,82 @@ services:
     depends_on:
       database-migration:
         condition: service_completed_successfully
+      otel-collector:
+        condition: service_started
     networks:
       - fleetmanager-network
+
+  # OpenTelemetry Collector
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:0.98.0
+    container_name: otel-collector
+    restart: unless-stopped
+    command: ["--config=/etc/otel-collector-config.yml"]
+    volumes:
+      - ./otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
+      - "8889:8889"   # Prometheus exporter
+    networks:
+      - fleetmanager-network
+    depends_on:
+      - jaeger
+      - prometheus
+
+  # Jaeger for tracing
+  jaeger:
+    image: jaegertracing/all-in-one:1.57
+    container_name: jaeger
+    restart: unless-stopped
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "14268:14268" # Jaeger collector
+    networks:
+      - fleetmanager-network
+
+  # Prometheus for metrics
+  prometheus:
+    image: prom/prometheus:v2.52.0
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    ports:
+      - "9090:9090"
+    networks:
+      - fleetmanager-network
+
+  # Grafana for visualization
+  grafana:
+    image: grafana/grafana:11.0.0
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    networks:
+      - fleetmanager-network
+    depends_on:
+      - prometheus
 
 
 
 volumes:
   postgres_data:
     driver: local
-  email_poller_data:
+  email_processor_data:
     driver: local
-  email_poller_logs:
+  email_processor_logs:
+    driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
     driver: local
 
 networks:
