--- a/services/database-migration/pyproject.toml
+++ b/services/database-migration/pyproject.toml
@@ -6,6 +6,9 @@ requires-python = ">=3.13"
 dependencies = [
     "database-models",
     "alembic>=1.13.0",
+    "opentelemetry-api>=1.25.0",
+    "opentelemetry-sdk>=1.25.0",
+    "opentelemetry-exporter-otlp>=1.25.0",
 ]
 
 [tool.uv.sources]
