--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,11 +20,11 @@ services:
       - fleetmanager-network
 
   database-migration:
-    image: ghcr.io/valkozaur/database-migration:latest
+    image: ghcr.io/valkozaur/database-migration:main
     container_name: database-migration
     restart: "no"
     env_file:
-      - .env
+      - .env.production
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     depends_on:
@@ -38,6 +38,7 @@ services:
     container_name: email-processor
     restart: unless-stopped
     env_file:
+      - .env.production
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
@@ -113,8 +114,20 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
     networks:
       - fleetmanager-network
-    depends_on:
-      - prometheus
+
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+    networks:
+      - fleetmanager-network
 
 
 
@@ -129,6 +142,7 @@ volumes:
     driver: local
   grafana_data:
     driver: local
+
 
 networks:
   fleetmanager-network:
