infrastructure: use default docker-compose file in deploy workflow
Replace explicit "-f docker-compose.prod.yml" with default "docker compose" commands
in .github/workflows/deploy-email-processor.yml so the deploy action uses the
repository's compose configuration by default.

--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -82,5 +82,5 @@ jobs:
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
             cd ~/fleetmanager
-            docker compose -f docker-compose.prod.yml pull
-            docker compose -f docker-compose.prod.yml up -d
+            docker compose pull
+            docker compose up -d
