--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -35,19 +35,11 @@ server {
     listen 443 ssl;
     server_name jaeger.valdanktrading.org;
 
-    ssl_certificate /opt/n8n-stack/certbot/conf/live/jaeger.valdanktrading.org/fullchain.pem;
-    ssl_certificate_key /opt/n8n-stack/certbot/conf/live/jaeger.valdanktrading.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/jaeger.valdanktrading.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jaeger.valdanktrading.org/privkey.pem;
 
     location / {
-        proxy_pass http://oauth2-proxy:4180;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /oauth2/ {
-        proxy_pass http://oauth2-proxy:4180;
+        proxy_pass http://jaeger:16686;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,8 +51,8 @@ server {
     listen 443 ssl;
     server_name grafana.valdanktrading.org;
 
-    ssl_certificate /opt/n8n-stack/certbot/conf/live/grafana.valdanktrading.org/fullchain.pem;
-    ssl_certificate_key /opt/n8n-stack/certbot/conf/live/grafana.valdanktrading.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/grafana.valdanktrading.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/grafana.valdanktrading.org/privkey.pem;
 
     location / {
         proxy_pass http://grafana:3000;
@@ -75,8 +67,8 @@ server {
     listen 443 ssl;
     server_name prometheus.valdanktrading.org;
 
-    ssl_certificate /opt/n8n-stack/certbot/conf/live/prometheus.valdanktrading.org/fullchain.pem;
-    ssl_certificate_key /opt/n8n-stack/certbot/conf/live/prometheus.valdanktrading.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/prometheus.valdanktrading.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/prometheus.valdanktrading.org/privkey.pem;
 
     location / {
         proxy_pass http://prometheus:9090;
