--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,26 @@ services:
     depends_on:
       - prometheus
 
+  oauth2-proxy:
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
+    container_name: oauth2-proxy
+    restart: unless-stopped
+    ports:
+      - "4180:4180"
+    volumes:
+      - ./oauth2-proxy.cfg:/etc/oauth2-proxy.cfg
+    environment:
+      OAUTH2_PROXY_CLIENT_ID: ${OAUTH2_PROXY_CLIENT_ID}
+      OAUTH2_PROXY_CLIENT_SECRET: ${OAUTH2_PROXY_CLIENT_SECRET}
+      OAUTH2_PROXY_COOKIE_SECRET: ${OAUTH2_PROXY_COOKIE_SECRET}
+      OAUTH2_PROXY_PROVIDER: "google"
+      OAUTH2_PROXY_EMAIL_DOMAINS: "*"
+      OAUTH2_PROXY_HTTP_ADDRESS: "0.0.0.0:4180"
+      OAUTH2_PROXY_REDIRECT_URL: "https://auth.valdanktrading.org/oauth2/callback"
+      OAUTH2_PROXY_UPSTREAMS: "http://nginx:80"
+    networks:
+      - fleetmanager-network
+
 volumes:
   postgres_data:
     driver: local
