--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -6,7 +6,9 @@ server {
         root /var/www/certbot;
     }
 
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -17,7 +19,9 @@ server {
         root /var/www/certbot;
     }
 
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -28,7 +32,9 @@ server {
         root /var/www/certbot;
     }
 
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -39,6 +45,14 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/jaeger.valdanktrading.org/privkey.pem;
 
     location / {
+        auth_request /oauth2/auth;
+        error_page 401 = /oauth2/sign_in;
+
+        auth_request_set $user $upstream_http_x_auth_request_user;
+        auth_request_set $email $upstream_http_x_auth_request_email;
+        proxy_set_header X-User $user;
+        proxy_set_header X-Email $email;
+
         proxy_pass http://jaeger:16686;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -55,6 +69,14 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/grafana.valdanktrading.org/privkey.pem;
 
     location / {
+        auth_request /oauth2/auth;
+        error_page 401 = /oauth2/sign_in;
+
+        auth_request_set $user $upstream_http_x_auth_request_user;
+        auth_request_set $email $upstream_http_x_auth_request_email;
+        proxy_set_header X-User $user;
+        proxy_set_header X-Email $email;
+
         proxy_pass http://grafana:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -71,10 +93,27 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/prometheus.valdanktrading.org/privkey.pem;
 
     location / {
+        auth_request /oauth2/auth;
+        error_page 401 = /oauth2/sign_in;
+
+        auth_request_set $user $upstream_http_x_auth_request_user;
+        auth_request_set $email $upstream_http_x_auth_request_email;
+        proxy_set_header X-User $user;
+        proxy_set_header X-Email $email;
+
         proxy_pass http://prometheus:9090;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+# Internal location for authentication requests
+location /oauth2/ {
+    proxy_pass http://oauth2-proxy:4180;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 }
