--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -1,3 +1,7 @@
+upstream oauth2_proxy {
+    server oauth2-proxy:4180;
+}
+
 server {
     listen 80;
     server_name jaeger.valdanktrading.org;
@@ -6,9 +10,7 @@ server {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -19,9 +21,7 @@ server {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -32,9 +32,7 @@ server {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -44,14 +42,38 @@ server {
     ssl_certificate /etc/letsencrypt/live/jaeger.valdanktrading.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/jaeger.valdanktrading.org/privkey.pem;
 
+    location /oauth2/ {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host                    $host;
+        proxy_set_header X-Real-IP               $remote_addr;
+        proxy_set_header X-Scheme                $scheme;
+        proxy_set_header X-Auth-Request-Redirect $request_uri;
+    }
+
+    location = /oauth2/auth {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host             $host;
+        proxy_set_header X-Real-IP        $remote_addr;
+        proxy_set_header X-Scheme         $scheme;
+        # nginx auth_request includes headers but you need to ensure Content-Length is 0
+        proxy_set_header Content-Length   "";
+        proxy_pass_request_body           off;
+    }
+
     location / {
         auth_request /oauth2/auth;
         error_page 401 = /oauth2/sign_in;
 
-        auth_request_set $user $upstream_http_x_auth_request_user;
-        auth_request_set $email $upstream_http_x_auth_request_email;
-        proxy_set_header X-User $user;
+        # pass information via X-User and X-Email headers to backend,
+        # requires running with --set-xauthrequest flag
+        auth_request_set $user   $upstream_http_x_auth_request_user;
+        auth_request_set $email  $upstream_http_x_auth_request_email;
+        proxy_set_header X-User  $user;
         proxy_set_header X-Email $email;
+
+        # if you enabled --cookie-refresh, this is needed for it to work with auth_request
+        auth_request_set $auth_cookie $upstream_http_set_cookie;
+        add_header Set-Cookie $auth_cookie;
 
         proxy_pass http://jaeger:16686;
         proxy_set_header Host $host;
@@ -68,14 +90,34 @@ server {
     ssl_certificate /etc/letsencrypt/live/grafana.valdanktrading.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/grafana.valdanktrading.org/privkey.pem;
 
+    location /oauth2/ {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host                    $host;
+        proxy_set_header X-Real-IP               $remote_addr;
+        proxy_set_header X-Scheme                $scheme;
+        proxy_set_header X-Auth-Request-Redirect $request_uri;
+    }
+
+    location = /oauth2/auth {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host             $host;
+        proxy_set_header X-Real-IP        $remote_addr;
+        proxy_set_header X-Scheme         $scheme;
+        proxy_set_header Content-Length   "";
+        proxy_pass_request_body           off;
+    }
+
     location / {
         auth_request /oauth2/auth;
         error_page 401 = /oauth2/sign_in;
 
-        auth_request_set $user $upstream_http_x_auth_request_user;
-        auth_request_set $email $upstream_http_x_auth_request_email;
-        proxy_set_header X-User $user;
+        auth_request_set $user   $upstream_http_x_auth_request_user;
+        auth_request_set $email  $upstream_http_x_auth_request_email;
+        proxy_set_header X-User  $user;
         proxy_set_header X-Email $email;
+
+        auth_request_set $auth_cookie $upstream_http_set_cookie;
+        add_header Set-Cookie $auth_cookie;
 
         proxy_pass http://grafana:3000;
         proxy_set_header Host $host;
@@ -92,14 +134,34 @@ server {
     ssl_certificate /etc/letsencrypt/live/prometheus.valdanktrading.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/prometheus.valdanktrading.org/privkey.pem;
 
+    location /oauth2/ {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host                    $host;
+        proxy_set_header X-Real-IP               $remote_addr;
+        proxy_set_header X-Scheme                $scheme;
+        proxy_set_header X-Auth-Request-Redirect $request_uri;
+    }
+
+    location = /oauth2/auth {
+        proxy_pass       http://oauth2_proxy;
+        proxy_set_header Host             $host;
+        proxy_set_header X-Real-IP        $remote_addr;
+        proxy_set_header X-Scheme         $scheme;
+        proxy_set_header Content-Length   "";
+        proxy_pass_request_body           off;
+    }
+
     location / {
         auth_request /oauth2/auth;
         error_page 401 = /oauth2/sign_in;
 
-        auth_request_set $user $upstream_http_x_auth_request_user;
-        auth_request_set $email $upstream_http_x_auth_request_email;
-        proxy_set_header X-User $user;
+        auth_request_set $user   $upstream_http_x_auth_request_user;
+        auth_request_set $email  $upstream_http_x_auth_request_email;
+        proxy_set_header X-User  $user;
         proxy_set_header X-Email $email;
+
+        auth_request_set $auth_cookie $upstream_http_set_cookie;
+        add_header Set-Cookie $auth_cookie;
 
         proxy_pass http://prometheus:9090;
         proxy_set_header Host $host;
@@ -107,13 +169,4 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-}
-
-# Internal location for authentication requests
-location /oauth2/ {
-    proxy_pass http://oauth2-proxy:4180;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
 }
