--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,7 @@ services:
 
   # Database Migration Service
   database-migration:
-    build:
-      context: .
-      dockerfile: ./services/database-migration/Dockerfile
+    image: ghcr.io/valkozaur/database-migration:main
     container_name: database-migration
     restart: "no"
     env_file:
@@ -43,9 +41,7 @@ services:
 
   # Email Processing Service
   email-processor:
-    build:
-      context: .
-      dockerfile: ./services/email-processor/Dockerfile
+    image: ghcr.io/valkozaur/email-processor:main
     depends_on:
       database-migration:
         condition: service_completed_successfully
@@ -153,9 +149,15 @@ services:
       - fleetmanager-network
     depends_on:
       - certbot
+      - oauth2-proxy
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
     command: /bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'
 
   oauth2-proxy:
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
     image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
     container_name: oauth2-proxy
     restart: unless-stopped
@@ -164,9 +166,9 @@ services:
       - OAUTH2_PROXY_COOKIE_SECRET=${OAUTH2_PROXY_COOKIE_SECRET}
       - OAUTH2_PROXY_CLIENT_ID=${OAUTH2_PROXY_CLIENT_ID}
       - OAUTH2_PROXY_CLIENT_SECRET=${OAUTH2_PROXY_CLIENT_SECRET}
-      - OAUTH2_PROXY_EMAIL_DOMAINS=*
+      - OAUTH2_PROXY_EMAIL_DOMAINS=valdanktrading.org
       - OAUTH2_PROXY_COOKIE_SECURE=false # Set to true if using HTTPS with valid certs
-      - OAUTH2_PROXY_UPSTREAMS=http://jaeger:16686,http://grafana:3000,http://prometheus:9090
+      - OAUTH2_PROXY_UPSTREAMS=static://202
       - OAUTH2_PROXY_REDIRECT_URL=https://jaeger.valdanktrading.org/oauth2/callback # You might need one proxy per subdomain or use a wildcard cookie domain
       # For multiple subdomains, it is better to use a wildcard cookie domain:
       - OAUTH2_PROXY_COOKIE_DOMAIN=.valdanktrading.org
@@ -175,6 +177,10 @@ services:
       - OAUTH2_PROXY_PROVIDER=google
     networks:
       - fleetmanager-network
+    depends_on:
+      - jaeger
+      - grafana
+      - prometheus
     depends_on:
       - jaeger
       - grafana
@@ -190,6 +196,12 @@ volumes:
   prometheus_data:
     driver: local
   grafana_data:
+    driver: local
+
+  certbot_conf:
+    driver: local
+
+  certbot_www:
     driver: local
 
   certbot_conf:
