--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,60 +1,88 @@
+networks:
+  fleetmanager-network:
+    driver: bridge
+
 services:
+  # PostgreSQL Database
   db:
     image: postgres:15-alpine
     container_name: fleetmanager-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-fleetmanager}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-fleetmanager_dev}
+      POSTGRES_DB: ${POSTGRES_DB:-fleetmanager}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-fleetmanager}" ]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - fleetmanager-network
 
+  # Database Migration Service
   database-migration:
     image: ghcr.io/valkozaur/database-migration:main
     container_name: database-migration
     restart: "no"
     env_file:
-      - .env.production
+      - .env
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-fleetmanager}:${POSTGRES_PASSWORD:-fleetmanager_dev}@db:5432/${POSTGRES_DB:-fleetmanager}
     depends_on:
       db:
         condition: service_healthy
     networks:
       - fleetmanager-network
 
+  # Email Processing Service
   email-processor:
     image: ghcr.io/valkozaur/email-processor:main
+    depends_on:
+      database-migration:
+        condition: service_completed_successfully
     container_name: email-processor
     restart: unless-stopped
     env_file:
-      - .env.production
+      - .env
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
-      OTEL_SERVICE_NAME: email-processor
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
     volumes:
+      # Persist data and tokens
       - email_processor_data:/app/data
       - email_processor_logs:/app/logs
+      # Mount credentials (you'll need to provide these)
       - ./.credentials:/app/credentials:ro
     mem_limit: 512m
     mem_reservation: 256m
     cpus: 1.0
+    healthcheck:
+      test: [ "CMD-SHELL", "test -f /app/credentials/credentials.json || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    networks:
+      - fleetmanager-network
+
+  # API Service
+  api:
+    image: ghcr.io/valkozaur/fleetmanager-api:main
+    container_name: fleetmanager-api
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-fleetmanager}:${POSTGRES_PASSWORD:-fleetmanager_dev}@db:5432/${POSTGRES_DB:-fleetmanager}
+    ports:
+      - "8000:8000"
     depends_on:
       database-migration:
         condition: service_completed_successfully
-      otel-collector:
-        condition: service_started
     networks:
       - fleetmanager-network
 
@@ -63,13 +91,13 @@ services:
     image: otel/opentelemetry-collector-contrib:0.98.0
     container_name: otel-collector
     restart: unless-stopped
-    command: ["--config=/etc/otel-collector-config.yml"]
+    command: [ "--config=/etc/otel-collector-config.yml" ]
     volumes:
       - ./otel-collector-config.yml:/etc/otel-collector-config.yml
     ports:
-      - "4317:4317"   # OTLP gRPC receiver
-      - "4318:4318"   # OTLP HTTP receiver
-      - "8889:8889"   # Prometheus exporter
+      - "4317:4317" # OTLP gRPC receiver
+      - "4318:4318" # OTLP HTTP receiver
+      - "8889:8889" # Prometheus exporter
     networks:
       - fleetmanager-network
     depends_on:
@@ -114,25 +142,61 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
     networks:
       - fleetmanager-network
+    depends_on:
+      - prometheus
 
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - fleetmanager-network
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.25-alpine
     container_name: nginx
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - fleetmanager-network
+    depends_on:
+      - certbot
+      - oauth2-proxy
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    command: /bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'
+
+  oauth2-proxy:
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
+    container_name: oauth2-proxy
+    restart: unless-stopped
+    environment:
+      - OAUTH2_PROXY_HTTP_ADDRESS=0.0.0.0:4180
+      - OAUTH2_PROXY_COOKIE_SECRET=${OAUTH2_PROXY_COOKIE_SECRET}
+      - OAUTH2_PROXY_CLIENT_ID=${OAUTH2_PROXY_CLIENT_ID}
+      - OAUTH2_PROXY_CLIENT_SECRET=${OAUTH2_PROXY_CLIENT_SECRET}
+      - OAUTH2_PROXY_EMAIL_DOMAINS=valdanktrading.org
+      - OAUTH2_PROXY_COOKIE_SECURE=false # Set to true if using HTTPS with valid certs
+      - OAUTH2_PROXY_UPSTREAMS=static://202
+      - OAUTH2_PROXY_REDIRECT_URL=https://jaeger.valdanktrading.org/oauth2/callback # You might need one proxy per subdomain or use a wildcard cookie domain
+      # For multiple subdomains, it is better to use a wildcard cookie domain:
+      - OAUTH2_PROXY_COOKIE_DOMAIN=.valdanktrading.org
+      - OAUTH2_PROXY_WHITELIST_DOMAINS=.valdanktrading.org
+      # Provider config (Google example)
+      - OAUTH2_PROXY_PROVIDER=google
+    networks:
+      - fleetmanager-network
     depends_on:
       - jaeger
       - grafana
       - prometheus
-
-
 
 volumes:
   postgres_data:
@@ -146,7 +210,8 @@ volumes:
   grafana_data:
     driver: local
 
+  certbot_conf:
+    driver: local
 
-networks:
-  fleetmanager-network:
-    driver: bridge
+  certbot_www:
+    driver: local
