--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -86,6 +86,14 @@ services:
     networks:
       - fleetmanager-network
 
+  # Frontend Dashboard
+  frontend:
+    image: ghcr.io/valkozaur/fleetmanager-frontend:main
+    container_name: fleetmanager-frontend
+    restart: unless-stopped
+    networks:
+      - fleetmanager-network
+
   # OpenTelemetry Collector
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.98.0
