Vn/feature/UI (#26)
* feat: Add new frontend application with orders management and UI components, and update API and deployment configurations to support it.

* ci: Automate deployment of config files and Nginx reload, removing manual sync steps from documentation.

--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -91,11 +91,50 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+  build-frontend:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      attestations: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/fleetmanager-frontend
+      - uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   deploy:
     name: Deploy to Hetzner
-    needs: [build-email-processor, build-database-migration, build-api]
+    needs: [build-email-processor, build-database-migration, build-api, build-frontend]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      
+      - name: Copy config files to Hetzner
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HETZNER_HOST }}
+          port: ${{ secrets.HETZNER_PORT }}
+          username: ${{ secrets.HETZNER_USER }}
+          key: ${{ secrets.HETZNER_SSH_KEY }}
+          source: "docker-compose.prod.yml,nginx/conf.d/fleetmanager.conf"
+          target: "~/fleetmanager"
+
       - name: Deploy to Hetzner
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -105,5 +144,14 @@ jobs:
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
             cd ~/fleetmanager
-            docker compose pull
-            docker compose up -d
+            # Ensure nginx conf dir exists if it was just created
+            mkdir -p nginx/conf.d
+            
+            # Pull latest images
+            docker compose -f docker-compose.prod.yml pull
+            
+            # Restart services with new config
+            docker compose -f docker-compose.prod.yml up -d --remove-orphans
+            
+            # Reload Nginx to apply new config
+            docker compose -f docker-compose.prod.yml exec nginx nginx -s reload
