--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,10 @@ services:
       - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-fleetmanager}" ]
-      interval: 10s
+      interval: 2s
       timeout: 5s
       retries: 5
+      start_period: 5s
     networks:
       - fleetmanager-network
 
