feat: initialize Vite dependency optimization files and add API service dependency for Nginx.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,7 @@ services:
     depends_on:
       - certbot
       - oauth2-proxy
+      - api
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - certbot_conf:/etc/letsencrypt
