--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -191,7 +191,8 @@ services:
       - OAUTH2_PROXY_CLIENT_ID=${OAUTH2_PROXY_CLIENT_ID}
       - OAUTH2_PROXY_CLIENT_SECRET=${OAUTH2_PROXY_CLIENT_SECRET}
       - OAUTH2_PROXY_EMAIL_DOMAINS=valdanktrading.org
-      - OAUTH2_PROXY_COOKIE_SECURE=false # Set to true if using HTTPS with valid certs
+      - OAUTH2_PROXY_COOKIE_SECURE=true
+      - OAUTH2_PROXY_REVERSE_PROXY=true
       - OAUTH2_PROXY_UPSTREAMS=static://202
       - OAUTH2_PROXY_REDIRECT_URL=https://jaeger.valdanktrading.org/oauth2/callback # You might need one proxy per subdomain or use a wildcard cookie domain
       # For multiple subdomains, it is better to use a wildcard cookie domain:
