--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -218,7 +218,9 @@ server {
         auth_request_set $auth_cookie $upstream_http_set_cookie;
         add_header Set-Cookie $auth_cookie;
 
-        proxy_pass http://fleetmanager-api:8000;
+        resolver 127.0.0.11 valid=30s;
+        set $upstream_api fleetmanager-api;
+        proxy_pass http://$upstream_api:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -274,7 +276,9 @@ server {
         auth_request_set $auth_cookie $upstream_http_set_cookie;
         add_header Set-Cookie $auth_cookie;
 
-        proxy_pass http://frontend:80;
+        resolver 127.0.0.11 valid=30s;
+        set $upstream_frontend frontend;
+        proxy_pass http://$upstream_frontend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
