feat: add OAuth2 Proxy configuration variables and Nginx `X-Forwarded-Proto` headers.

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,8 @@ TEST_EMAIL_QUERY=
 # OpenTelemetry Configuration
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=email-processor
+
+# OAuth2 Proxy Configuration
+OAUTH2_PROXY_COOKIE_SECRET= # Generate with: python -c 'import os,base64; print(base64.urlsafe_b64encode(os.urandom(16)).decode())'
+OAUTH2_PROXY_CLIENT_ID= # From Google Cloud Console -> APIs & Services -> Credentials
+OAUTH2_PROXY_CLIENT_SECRET= # From Google Cloud Console -> APIs & Services -> Credentials
