--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -47,6 +47,7 @@ server {
         proxy_set_header Host                    $host;
         proxy_set_header X-Real-IP               $remote_addr;
         proxy_set_header X-Scheme                $scheme;
+        proxy_set_header X-Forwarded-Proto       $scheme;
         proxy_set_header X-Auth-Request-Redirect $request_uri;
     }
 
@@ -55,6 +56,7 @@ server {
         proxy_set_header Host             $host;
         proxy_set_header X-Real-IP        $remote_addr;
         proxy_set_header X-Scheme         $scheme;
+        proxy_set_header X-Forwarded-Proto $scheme;
         # nginx auth_request includes headers but you need to ensure Content-Length is 0
         proxy_set_header Content-Length   "";
         proxy_pass_request_body           off;
