fix(api): enable credentials for frontend client and add CORS-enabled 401 + preflight handling in nginx
Enable axios withCredentials so cookies are sent with API requests. Update nginx API vhost to return a JSON 401 with CORS headers, handle OPTIONS preflight (including Cookie header and Access-Control-Allow-Credentials), and add CORS headers to all API responses.

--- a/nginx/conf.d/fleetmanager.conf
+++ b/nginx/conf.d/fleetmanager.conf
@@ -208,11 +208,21 @@ server {
         proxy_pass_request_body           off;
     }
 
+    # Custom 401 error page that returns CORS headers for API
+    location = /oauth2/401 {
+        internal;
+        add_header 'Access-Control-Allow-Origin' 'https://dashboard.valdanktrading.org' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        return 401 '{"error": "unauthorized", "message": "Please log in"}';
+    }
+
     location / {
+        # Handle CORS preflight
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://dashboard.valdanktrading.org';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Allow-Origin' 'https://dashboard.valdanktrading.org' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Cookie' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
@@ -220,7 +230,8 @@ server {
         }
 
         auth_request /oauth2/auth;
-        error_page 401 = /oauth2/sign_in;
+        # Return 401 with CORS headers instead of redirect for API
+        error_page 401 = /oauth2/401;
 
         auth_request_set $user   $upstream_http_x_auth_request_user;
         auth_request_set $email  $upstream_http_x_auth_request_email;
@@ -229,6 +240,10 @@ server {
 
         auth_request_set $auth_cookie $upstream_http_set_cookie;
         add_header Set-Cookie $auth_cookie;
+
+        # Add CORS headers for all responses
+        add_header 'Access-Control-Allow-Origin' 'https://dashboard.valdanktrading.org' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         resolver 127.0.0.11 valid=30s;
         set $upstream_api fleetmanager-api;
