--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -43,13 +43,17 @@ services:
       - fleetmanager-network
 
   # Email Processing Service
+  # NOTE: This service runs as a cron job, not continuously.
+  # To run manually: docker compose --profile cron run --rm email-processor
   email-processor:
     image: ghcr.io/valkozaur/email-processor:main
+    profiles:
+      - cron
     depends_on:
       database-migration:
         condition: service_completed_successfully
     container_name: email-processor
-    restart: unless-stopped
+    restart: "no"
     env_file:
       - .env
     environment:
