--- a/services/database-migration/alembic.ini
+++ b/services/database-migration/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts.
 # Use relative path to database-models package migrations
-script_location = ../database-models/migrations
+script_location = /app/services/database-models/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
